# lon04-reading-coach

./: .dockerignore  .env  .env.example  .env.local  .env.template  .gitignore  Dockerfile  NOVA_INTEGRATION_STATUS.md  NOVA_SONIC_IMPLEMENTATION.md  README.md  SETUP_NOVA_CREDENTIALS.md  demo_nova_sonic.py  demo_reading_agent.py  demo_reading_agent_ws.py  pyproject.toml  run.py  test_audio_logging.py  test_nova_sonic_sts.py  verify_setup.sh
Infra/: DiagramMermaid.txt  README.md  README.txt  TemplateS3.yml
Infra/SolutionCFN/: ApiStack.yml  AuthStack.yml  DataStack.yml  README.md  RootStack.yml  get_book_url.py  list_books.py  profile.py
examples/: README.md  audio_websocket_client.ipynb  setup_and_run.py  start.sh
examples/.ipynb_checkpoints/: audio_websocket_client-checkpoint.ipynb
frontend/: README.md  index.html
resources/books/: L.2 - Bathtub Safari_pages.json  L.3 - Monkey Business_pages.json  L.3 - The Lion who Wouldn't Try_pages.json
src/application/: __init__.py  api.py  config.py  controller.py  websocket_handler.py
src/infrastructure/: __init__.py  aws_book_provider.py  dynamodb_session_repository.py  dynamodb_user_profile_provider.py  local_book_provider.py  local_session_repository.py  local_user_profile_provider.py  nova_sonic.py  nova_sonic_mock.py  nova_sonic_reading_agent.py  simple_reading_agent.py
src/lon04_reading_coach/: __init__.py
tests/e2e/: README.md  __init__.py  test_complete_user_journey.py
tests/integration/: test_nova_sonic_agent.py
tools/: README.md  lambda_pdf_text_extraction.py  pdf_text_extraction.py
(+26 files in other folders)
